sms and email notification added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,3 +53,11 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 
 #email notification recievers addresses (seperate by comma)
 mail.recievers=sajeer@pickme.lk,ahamedsajeer23@gmail.com
+
+##sms config
+sms.url=http://35.184.75.146:8004/sendSMS?
+sms.countryCode=94
+#seperate numbers by comma
+sms.contactNumbers=774499151
+
+
