--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
-## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/Eztaxi
-spring.datasource.username = root
-spring.datasource.password =
 
+
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+#spring.datasource.url = jdbc:mysql://localhost:3306/Eztaxi
+#spring.datasource.username = root
+#spring.datasource.password =
+
+spring.datasource.url=jdbc:mysql://104.197.126.211:3307/Eztaxi
+spring.datasource.username=myroot
+spring.datasource.password=Pa685w0rd
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
@@ -19,24 +24,29 @@ timeWindow=60
 #Default time window for getting pending requests(in minutes)
 timeWindowForPendingRequests=60
 
+#time zone (Asia/Colombo)
+timeZone=Asia/Colombo
+
 #time gap between batch processing of error count (in seconds)
 fixedRate.timeBetweenErrorCount=5000
 
 #time gap between batch processing of pendingRequestCount count (in seconds)
 fixedRate.timeBetweenPendingCount=10000
 
+
+
+
 #max number of request that can be be in pending status
 maxPending=5
-
-#time zone (Asia/Colombo)
-timeZone=Asia/Colombo
-
-#Default Count window for processing error count data (Not used)
-countWindow=100
 
 #ratio Thresholds
 totFailureRatio=0.5
 individualErrorRatio=0.3
+
+
+#Default Count window for processing error count data (Not used)
+countWindow=100
+
 
 
 #Email config
@@ -59,5 +69,23 @@ sms.url=http://35.184.75.146:8004/sendSMS?
 sms.countryCode=94
 #seperate numbers by comma
 sms.contactNumbers=774499151
+
+
+management.endpoint.shutdown.enabled=true
+# Use "*" to expose all endpoints, or a comma-separated list to expose selected ones
+management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.exclude=
+# Use "*" to expose all endpoints, or a comma-separated list to expose selected ones
+management.endpoints.jmx.exposure.include=*
+management.endpoints.jmx.exposure.exclude=
+management.health.mongo.enabled=false
+# HEALTH ENDPOINT
+management.endpoint.health.show-details=always
+
+
+##tomcat port number deafult 8080
+server.port=9090
+
+
 
 
