--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-
-
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 #spring.datasource.url = jdbc:mysql://localhost:3306/Eztaxi
 #spring.datasource.username = root
@@ -12,7 +10,6 @@ spring.datasource.password=Pa685w0rd
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = none
 
@@ -20,49 +17,24 @@ spring.jpa.hibernate.ddl-auto = none
 
 #Default time window for processing error count data(in minutes)
 timeWindow=60
-
 #Default time window for getting pending requests(in minutes)
 timeWindowForPendingRequests=60
 
 #time zone (Asia/Colombo)
 timeZone=Asia/Colombo
 
-#time gap between batch processing of error count (in seconds)
-fixedRate.timeBetweenErrorCount=5000
-
-#time gap between batch processing of pendingRequestCount count (in seconds)
-fixedRate.timeBetweenPendingCount=10000
-
-
+#time gap between batch processing of error count (in milliseconds)
+fixedRate.timeBetweenErrorCount=60000
+#time gap between batch processing of pendingRequestCount count (in milliseconds)
+fixedRate.timeBetweenPendingCount=300000
 
 
 #max number of request that can be be in pending status
 maxPending=5
-
 #ratio Thresholds
 totFailureRatio=0.5
 individualErrorRatio=0.3
 
-
-#Default Count window for processing error count data (Not used)
-countWindow=100
-
-
-
-#Email config
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=pickmesajeer@gmail.com
-spring.mail.password=pickme@sajeer1
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
-
-#email notification recievers addresses (seperate by comma)
-mail.recievers=sajeer@pickme.lk,ahamedsajeer23@gmail.com
 
 ##sms config
 sms.url=http://35.184.75.146:8004/sendSMS?
@@ -70,6 +42,10 @@ sms.countryCode=94
 #seperate numbers by comma
 sms.contactNumbers=774499151
 
+##eamil config
+email.url=http://35.184.75.146:8004/sendEmail?
+#seperate addresses by comma
+email.emailaddress=sajeer@pickme.lk,ahamedsajeer23@gmail.com
 
 management.endpoint.shutdown.enabled=true
 # Use "*" to expose all endpoints, or a comma-separated list to expose selected ones
