user-wise anomaly

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ timeZone=Asia/Colombo
 #time gap between batch processing of error count (in milliseconds)
 fixedRate.timeBetweenErrorCount=60000
 #time gap between batch processing of pendingRequestCount count (in milliseconds)
-fixedRate.timeBetweenPendingCount=300000
+fixedRate.timeBetweenPendingCount=30000
 
 
 #max number of request that can be be in pending status
@@ -35,6 +35,10 @@ maxPending=5
 totFailureRatio=0.5
 individualErrorRatio=0.3
 
+##BadRequests
+#in hours
+badRequestTimeWindow=24
+badRequestCountWindow=10
 
 ##sms config
 sms.url=http://35.184.75.146:8004/sendSMS?
@@ -60,7 +64,7 @@ management.endpoint.health.show-details=always
 
 
 ##tomcat port number deafult 8080
-server.port=9090
+server.port=8080
 
 
 
