--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,12 +44,12 @@ badRequestCountWindow=10
 sms.url=http://35.184.75.146:8004/sendSMS?
 sms.countryCode=94
 #seperate numbers by comma
-sms.contactNumbers=774499151
+sms.contactNumbers=774499151,777566676
 
 ##eamil config
 email.url=http://35.184.75.146:8004/sendEmail?
 #seperate addresses by comma
-email.emailaddress=sajeer@pickme.lk,ahamedsajeer23@gmail.com
+email.emailaddress=sajeer@pickme.lk,azhar@pickme.lk
 
 management.endpoint.shutdown.enabled=true
 # Use "*" to expose all endpoints, or a comma-separated list to expose selected ones
