--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,21 +51,13 @@ email.url=http://35.184.75.146:8004/sendEmail?
 #seperate addresses by comma
 email.emailaddress=sajeer@pickme.lk,azhar@pickme.lk
 
-management.endpoint.shutdown.enabled=true
-# Use "*" to expose all endpoints, or a comma-separated list to expose selected ones
-management.endpoints.web.exposure.include=*
-management.endpoints.web.exposure.exclude=
-# Use "*" to expose all endpoints, or a comma-separated list to expose selected ones
-management.endpoints.jmx.exposure.include=*
-management.endpoints.jmx.exposure.exclude=
-management.health.mongo.enabled=false
-# HEALTH ENDPOINT
-management.endpoint.health.show-details=always
-
-
 ##tomcat port number deafult 8080
 server.port=8080
 
 
-
+#Metrics related configurations
+management.endpoint.metrics.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
 
